--- a/inspectors.html
+++ b/inspectors.html
@@ -4,7 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Sessió Pràctica · IA per a la Inspecció Educativa</title>
-<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Outfit:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=DM+Serif..." rel="stylesheet">
+<link rel="stylesheet" href="styles.css">
 <style>
 :root {
   --navy: #0f2440;
