--- a/index.html
+++ b/index.html
@@ -3,16 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portal Recursos</title>
+    <title>Portal Recursos - CEFIRE IA</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
+    <!-- Sidebar Navigation -->
     <div class="sidebar">
-        <div class="title">🍓 Recursos</div>
+        <div class="sidebar-header">
+            <div class="title">🍓 Recursos CEFIRE</div>
+        </div>
         <nav class="menu" id="menu">
-            </nav>
+            <ul>
+                <li><a href="#" data-page="inspectors" class="nav-link">📋 HTML Inspectors</a></li>
+                <li><a href="#" data-page="sgae" class="nav-link">📚 SGAE</a></li>
+            </ul>
+        </nav>
     </div>
     
-    </body>
+    <!-- Main Content Area -->
+    <div class="main-content">
+        <div id="content-container">
+            <!-- Dynamic content will be loaded here -->
+            <div class="welcome">
+                <h1>Bienvenido</h1>
+                <p>Selecciona una opción del menú lateral para empezar.</p>
+            </div>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
 </html>
