--- a/index.html
+++ b/index.html
@@ -3,14 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resource CEFIRE IA</title>
+    <title>Index</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        nav {
+            background-color: #333;
+            overflow: hidden;
+        }
+        nav a {
+            float: left;
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+        nav a:hover {
+            background-color: #ddd;
+            color: black;
+        }
+    </style>
 </head>
 <body>
     <nav>
-        <ul>
-            <li><a href="inspectors.html">Inspectors</a></li>
-            <li><a href="sgae.html">SGAE</a></li>
-        </ul>
+        <a href="inspectors.html">Inspectors</a>
+        <a href="sgae.html">SGAE</a>
     </nav>
+    <h1>Welcome to Recursos CEFIRE IA</h1>
 </body>
 </html>
