--- a/index.html
+++ b/index.html
@@ -1,38 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ca">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-        nav {
-            background-color: #333;
-            overflow: hidden;
-        }
-        nav a {
-            float: left;
-            display: block;
-            color: white;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-        }
-        nav a:hover {
-            background-color: #ddd;
-            color: black;
-        }
-    </style>
+    <title>Recursos CEFIRE IA</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav>
-        <a href="inspectors.html">Inspectors</a>
-        <a href="sgae.html">SGAE</a>
-    </nav>
-    <h1>Welcome to Recursos CEFIRE IA</h1>
+    <header>
+        <div class="hero">
+            <h1>CEFIRE IA i Pensament Computacional</h1>
+            <p>Benvingut a la nostra plataforma de recursos! Explora continguts enriquidors per a la teua formació i aprenentatge.</p>
+        </div>
+    </header>
+    <main>
+        <section class="resources">
+            <h2>Recursos</h2>
+            <div class="resource-card">
+                <a href="inspectors.html">
+                    <h3>Inspectores</h3>
+                    <p>Accedeix a la informació i els recursos necessaris per a inspectors.</p>
+                </a>
+            </div>
+            <div class="resource-card">
+                <a href="sgae.html">
+                    <h3>SGAE</h3>
+                    <p>Consulta els recursos relacionats amb la SGAE.</p>
+                </a>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2026 CEFIRE IA. Tots els drets reservats.</p>
+    </footer>
 </body>
 </html>
